labCSD/src/pract1/PPool/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-21-openjdk/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
21
-classpath
/opt/bluej/bluejcore.jar:/opt/bluej/junit-4.12.jar:/opt/bluej/junit-jupiter-5.5.2.jar:/opt/bluej/junit-jupiter-api-5.5.2.jar:/opt/bluej/junit-jupiter-engine-5.5.2.jar:/opt/bluej/junit-jupiter-params-5.5.2.jar:/opt/bluej/junit-platform-commons-1.5.2.jar:/opt/bluej/junit-platform-engine-1.5.2.jar:/opt/bluej/junit-platform-launcher-1.5.2.jar:/opt/bluej/junit-platform-suite-api-1.5.2.jar:/opt/bluej/junit-vintage-engine-5.5.2.jar:/opt/bluej/hamcrest-core-1.3.jar:/opt/bluej/opentest4j-1.2.0.jar:/opt/bluej/lang-stride.jar:/opt/bluej/javafx/javafx.base.jar:/opt/bluej/javafx/javafx.controls.jar:/opt/bluej/javafx/javafx.fxml.jar:/opt/bluej/javafx/javafx.graphics.jar:/opt/bluej/javafx/javafx.media.jar:/opt/bluej/javafx/javafx.properties.jar:/opt/bluej/javafx/javafx.swing.jar:/opt/bluej/javafx/javafx.web.jar:/home/arturosasan/lab2DO/labCSD/src/pract1/PPool
-d
/home/arturosasan/lab2DO/labCSD/src/pract1/PPool/doc
-encoding
UTF-8
-charset
UTF-8
/home/arturosasan/lab2DO/labCSD/src/pract1/PPool/Pool2.java
<---- end of javadoc command ---->
Loading source file /home/arturosasan/lab2DO/labCSD/src/pract1/PPool/Pool2.java...
/home/arturosasan/lab2DO/labCSD/src/pract1/PPool/Pool2.java:33: error: ')' expected
        while (nanos li max_kids * (instructores - 1)) {
                    ^
/home/arturosasan/lab2DO/labCSD/src/pract1/PPool/Pool2.java:33: error: ';' expected
        while (nanos li max_kids * (instructores - 1)) {
                                ^
/home/arturosasan/lab2DO/labCSD/src/pract1/PPool/Pool2.java:33: error: variable declaration not allowed here
        while (nanos li max_kids * (instructores - 1)) {
                        ^
/home/arturosasan/lab2DO/labCSD/src/pract1/PPool/Pool2.java:33: error: not a statement
        while (nanos li max_kids * (instructores - 1)) {
                                                 ^
/home/arturosasan/lab2DO/labCSD/src/pract1/PPool/Pool2.java:33: error: ';' expected
        while (nanos li max_kids * (instructores - 1)) {
                                                    ^
5 errors
